chore: remove cache file from tracking, add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ config.yaml
 # Hypothesis test cache
 .hypothesis/
 
+# Translation cache
+.translatex_cache.json
+
 # Kiro specs (development only)
 .kiro/
 
